Add raw data for header to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <title>Document</title>
 </head>
 <body>
+   <div class="header">
+      <ul>
+        <li>Header Logo</li>
+        <li><a>header link one</a></li>
+        <li><a>header link two</a></li>
+        <li><a>header link three</a></li>
+      </ul>
 
+      <p>This website is awesome</p>
+      <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+      <button>Sign Up</button>
+      <div>
+        <p>this is a placeholder for an image</p>
+      </div>
+   </div> 
 </body>
 </html>
