--- a/index.html
+++ b/index.html
@@ -4,22 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
    <div class="header">
-      <ul>
-        <li>Header Logo</li>
-        <li><a>header link one</a></li>
-        <li><a>header link two</a></li>
-        <li><a>header link three</a></li>
-      </ul>
-
-      <p>This website is awesome</p>
-      <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-      <button>Sign Up</button>
-      <div>
+      <div class="hero">
+        <p>Header Logo</p>
+        <ul class="links">
+          <li><a>header link one</a></li>
+          <li><a>header link two</a></li>
+          <li><a>header link three</a></li>
+        </ul>
+      </div>
+      <div class="site-info">
+        <p>This website is awesome</p>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <button>Sign Up</button>
+      </div>
+      
+      <div class="image-placeholder">
         <p>this is a placeholder for an image</p>
       </div>
    </div> 
